FIX: 빽도 시 업힌 말 분리되는 오류 수정